// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en el <GifGrid /> Debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquiercosa"
      url="https://localhostcualquier/cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquiercosa"
      url="https://localhostcualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueba en el <GifGrid /> Debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
